@@ -8,6 +8,7 @@ CONFIG += release
 DEFINES += USE_PLAYERS
 DEFINES += YT_USE_SCRIPT
 DEFINES += D_BUTTON
+DEFINES += STYLE_SWITCHING
 
 DEFINES += D_PLAYERS
 
